--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:16-alpine as builder
 
-WORKDIR /usr/app
+WORKDIR /app
 
 COPY ./package.json ./
 RUN npm install
@@ -11,4 +11,4 @@ RUN npm run build
 FROM nginx
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /usr/app/build /usr/share/nginx/html
+COPY --from=builder /app/build /usr/share/nginx/html
