--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -21,8 +21,8 @@ services:
       dockerfile: Dockerfile.dev
       context: ./server
     volumes:
-      - /usr/app/node_modules
-      - ./server:/usr/app
+      - /app/node_modules
+      - ./server:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -36,8 +36,8 @@ services:
       dockerfile: Dockerfile.dev
       context: ./client
     volumes:
-      - /usr/app/node_modules
-      - ./client:/usr/app
+      - /app/node_modules
+      - ./client:/app
     environment:
       - WDS_SOCKET_PORT=0
   worker:
@@ -45,8 +45,8 @@ services:
       dockerfile: Dockerfile.dev
       context: ./worker
     volumes:
-      - /usr/app/node_modules
-      - ./worker:/usr/app
+      - /app/node_modules
+      - ./worker:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
